[tool.poetry]
name = "dslash"
version = "0.1.2"
description = "A library which supplements Discord.py by adding support for slash commands."
authors = ["Artemis <artemis@artemisdev.xyz>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/artemis21/dslash"
repository = "https://github.com/artemis21/dslash"
keywords = ["discord", "discord.py", "slash commands", "extension"]
include = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
# PyPI doesn't allow direct dependencies.
# "discord.py" = {git = "https://github.com/rapptz/discord.py.git"}

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-comprehensions = "^3.5.0"
flake8-datetimez = "^20.10.0"
flake8-docstrings = "^1.6.0"
flake8-mutable = "^1.2.0"
flake8-raise = "^0.0.5"
flake8-string-format = "^0.3.0"
flake8-todo = "^0.7"

[tool.isort]
profile = "black"
src_paths = ["dslash"]

[tool.poe.tasks]
_format = "black . -q"
_format_imports = "isort . -q"
lint = "flake8 ."
format = ["_format_imports", "_format", "lint"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
